# vectrex

./: .gitattributes  .gitignore  Cargo.toml
lib/vectrex_ai/: Cargo.toml
lib/vectrex_ai/src/: lib.rs
lib/vectrex_core/: Cargo.toml
lib/vectrex_core/src/: engine.rs  lib.rs  logging.rs
lib/vectrex_core/sub_crates/ecs/: Cargo.toml
lib/vectrex_core/sub_crates/ecs/src/: component.rs  entity.rs  lib.rs  system.rs
lib/vectrex_core/sub_crates/engine/: Cargo.toml
lib/vectrex_core/sub_crates/engine/src/: engine.rs  lib.rs  logging.rs  sdl_engine.rs  traits.rs
lib/vectrex_core/sub_crates/gfx/: Cargo.toml  build.rs
lib/vectrex_core/sub_crates/gfx/src/: camera.rs  entity.rs  lib.rs  material.rs  model.rs  render.rs  shader.rs
lib/vectrex_core/sub_crates/gfx_gui/: Cargo.toml
lib/vectrex_core/sub_crates/gfx_gui/src/: lib.rs
lib/vectrex_core/sub_crates/logging/: Cargo.toml
lib/vectrex_core/sub_crates/logging/src/: lib.rs  logging.rs
lib/vectrex_core/sub_crates/msg/: Cargo.toml
lib/vectrex_core/sub_crates/msg/src/: lib.rs
lib/vectrex_core/sub_crates/os_shell/: Cargo.toml
lib/vectrex_core/sub_crates/os_shell/src/: lib.rs
lib/vectrex_core/sub_crates/srl/: Cargo.toml
lib/vectrex_core/sub_crates/srl/src/: lib.rs
lib/vectrex_core/sub_crates/traits/: Cargo.toml
lib/vectrex_core/sub_crates/traits/src/: eventing.rs  graphics.rs  lib.rs
lib/vectrex_net/: Cargo.toml
lib/vectrex_net/src/: lib.rs
lib/vectrex_worlds/: Cargo.toml
lib/vectrex_worlds/src/: lib.rs
