
[package]
name    = "vectrex_core"
version = "0.0.0"
authors = [ "Chloë Strainge <nullpr.0@gmail.com>" ]
edition = "2018"

[lib]
crate-type = [ "rlib" ]

[dependencies]
vectrex_traits   = { path = "sub_crates/traits"   }
vectrex_logging  = { path = "sub_crates/logging"  }
vectrex_engine   = { path = "sub_crates/engine"   }
vectrex_os_shell = { path = "sub_crates/os_shell" }
vectrex_gfx      = { path = "sub_crates/gfx"      }
