
[package]
name    = "vectrex_gfx"
version = "0.0.0"
authors = [ "Chloe Strainge <nullpr.0@gmail.com>" ]
edition = "2018"
#build   = "build.rs"

[lib]
crate-type = [ "rlib" ]

[dependencies]
gl = "0.11.0"
sdl2 = { version = "0.31.0", features = [ "bundled" ] }

[build-dependencies]
#bindgen = "0.48.0"
