
[package]
name    = "vectrex_gfx"
version = "0.0.0"
authors = [ "Chloe Strainge <nullpr.0@gmail.com>" ]
edition = "2018"
#build   = "build.rs"

[lib]
crate-type = [ "rlib" ]

[build-dependencies]
#bindgen = "0.48.0"

[dependencies]
gl = "0.11.0"

[target.'cfg(not(target_os="windows"))'.dependencies]
sdl2 = "0.32.2"

[target.'cfg(target_os="windows")'.dependencies]
sdl2 = { version = "0.31.0", features = [ "bundled" ] }
