
[package]
name    = "vectrex_gfx"
version = "0.0.0"
authors = [ "Chloë Strainge <nullpr.0@gmail.com>" ]
edition = "2018"
#build   = "build.rs"

[lib]
crate-type = [ "rlib" ]

[build-dependencies]
#bindgen = "0.48.0"

[dependencies]
vectrex_traits = { path = "../traits" }

gl = "0.11.0"
sdl2 = { version = "0.31.0", features = [ "bundled" ] }
