
[package]
name    = "vectrex_os_shell"
version = "0.0.0"
authors = [ "Chloe Strainge <nullpr.0@gmail.com>" ]
edition = "2018"

[lib]
crate-type = [ "rlib" ]

[dependencies]
vectrex_logging = { path = "../logging" }
vectrex_gfx = { path = "../gfx" }

[target.'cfg(not(target_os="windows"))'.dependencies]
sdl2 = "0.32.2"

[target.'cfg(target_os="windows")'.dependencies]
sdl2 = { version = "0.31.0", features = [ "bundled" ] }
