
[package]
name    = "vectrex_os_shell"
version = "0.0.0"
authors = [ "Chloë Strainge <nullpr.0@gmail.com>" ]
edition = "2018"

[lib]
crate-type = [ "rlib" ]

[dependencies]
vectrex_traits = { path = "../traits" }
vectrex_logging = { path = "../logging" }
vectrex_gfx = { path = "../gfx" }

sdl2 = { version = "0.31.0", features = [ "bundled" ] }
